--- a/app/src/main/res/layout/activity_monitor.xml
+++ b/app/src/main/res/layout/activity_monitor.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="hermesWayFinder Monitor"
+            android:text="hermsWayFinder Monitor"
             android:textStyle="bold"
             android:textSize="24sp"
             android:textColor="@color/white"/>
